--- a/bio/index.html
+++ b/bio/index.html
@@ -187,9 +187,10 @@ flexibility(document.documentElement);
 
 	<div class="entry-content clear" itemprop="text">
 
+
+<p>I am an Assistant Professor at the <a href="https://engineering.nyu.edu/academics/departments/finance-and-risk-engineering" target="_blank" rel="noreferrer noopener">Department of Finance and Risk Engineering</a> of the <a href="https://engineering.nyu.edu/" target="_blank" rel="noreferrer noopener">NYU Tandon School of Engineering</a>.</p>		
 		
-		
-<p>I am a Ph.D. Candidate at the&nbsp;<a href="https://www.utoronto.ca/" target="_blank" rel="noreferrer noopener">University of Toronto</a>,&nbsp;<a href="https://www.mie.utoronto.ca/" target="_blank" rel="noreferrer noopener">Department of Mechanical and Industrial Engineering</a>. I am working with Professor&nbsp;<a href="https://cglee.mie.utoronto.ca/" target="_blank" rel="noreferrer noopener">Chi-Guhn Lee</a>&nbsp;at the&nbsp;<a href="https://cglee.mie.utoronto.ca/research-lab/" target="_blank" rel="noreferrer noopener">Dynamic Optimization &amp; Operations Management Lab</a>. I am funded by the Natural Sciences and Engineering Research Council of Canada (<a href="https://www.nserc-crsng.gc.ca/index_eng.asp" target="_blank" rel="noreferrer noopener">NSERC</a>) – Alexander Graham Bell Canada Graduate Fellowship and by the Fonds de recherche du Québec – Nature et technologies (<a href="http://www.frqnt.gouv.qc.ca/en/accueil" target="_blank" rel="noreferrer noopener">FRQNT</a>) fellowship.</p>
+<p>I earned a Ph.D. from the&nbsp;<a href="https://www.utoronto.ca/" target="_blank" rel="noreferrer noopener">University of Toronto</a>,&nbsp;<a href="https://www.mie.utoronto.ca/" target="_blank" rel="noreferrer noopener">Department of Mechanical and Industrial Engineering</a>. I worked with Professor&nbsp;<a href="https://cglee.mie.utoronto.ca/" target="_blank" rel="noreferrer noopener">Chi-Guhn Lee</a>&nbsp;at the&nbsp;<a href="https://cglee.mie.utoronto.ca/research-lab/" target="_blank" rel="noreferrer noopener">Dynamic Optimization &amp; Operations Management Lab</a>. I am funded by the Natural Sciences and Engineering Research Council of Canada (<a href="https://www.nserc-crsng.gc.ca/index_eng.asp" target="_blank" rel="noreferrer noopener">NSERC</a>) – Alexander Graham Bell Canada Graduate Fellowship and by the Fonds de recherche du Québec – Nature et technologies (<a href="http://www.frqnt.gouv.qc.ca/en/accueil" target="_blank" rel="noreferrer noopener">FRQNT</a>) fellowship.</p>
 
 
 
@@ -261,6 +262,7 @@ Chi-Guhn Lee, Amine Mohamed Aboussalah, Fujitsu Co-Creation Research Laboratory 
 
 
 <ul>
+<li>Champion of Tri-Campus League, UofT St. George Black Team (Toronto, 2022).</li>
 <li>Champion of Intramurals Athletics League, 1st Division Soccer SGS Team (Toronto, 2021).</li>
 <li>Champion of GECOS Soccer Tournament (Gold medal), MIE Team, Toronto, 2019.</li>
 <li>French Football Federation (FFF) License Futsal Player, 2011.</li>
