--- a/bio/index.html
+++ b/bio/index.html
@@ -202,7 +202,7 @@ flexibility(document.documentElement);
 
 
 
-<p>My CV can be found&nbsp;<a href="http://individual.utoronto.ca/amineaboussalah/data/CV_Amine_long_V27.pdf" target="_blank" rel="noreferrer noopener">here</a>.</p>
+<p>My CV can be found&nbsp;<a href="https://drive.google.com/file/d/1PDj14nL_VcT7MVaBKNCH5Cdx5U_ZfOR1/view?usp=sharing" target="_blank" rel="noreferrer noopener">here</a>.</p>
 
 
 
