--- a/bio/index.html
+++ b/bio/index.html
@@ -201,7 +201,7 @@ flexibility(document.documentElement);
 
 
 
-<p>My CV can be found&nbsp;<a href="https://github.com/ama-website/ama-website.github.io/raw/main/uploads/cv/CV_Amine_V41_Research.pdf&embedded=true" target="_blank" rel="noreferrer noopener">here</a>.</p>
+<p>My CV can be found&nbsp;<a href="https://github.com/ama-website/ama-website.github.io/raw/main/uploads/cv/CV_Amine_V41_Research.pdf" target="_blank" rel="noreferrer noopener">here</a>.</p>
 
 
 
